- fix issue with read/write state on disk - added a docker compose config for a small cluster (to better visualize results)